# solar-forecasting

./: Makefile  README.md  environment.yml  logs.txt  optuna_fusion.db  optuna_ground.db  optuna_satellite.db  optuna_study.db  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/best_optuna_fusion/: all_trials.csv  best_model.pt  best_params.yaml  config.yaml  param_importance.yaml  training_history.csv
models/best_optuna_fusion_crashed/: config.yaml  training_history.csv
models/best_optuna_ground/: all_trials.csv  best_model.pt  best_params.yaml  config.yaml  param_importance.yaml  training_history.csv
models/best_optuna_run1/: best_model.pt  best_params.yaml  config.yaml  training_history.csv
models/best_optuna_satellite/: all_trials.csv  best_model.pt  best_params.yaml  config.yaml  param_importance.yaml  training_history.csv
models/best_optuna_satellite_crashed/: all_trials.csv  best_model.pt  training_history.csv
notebooks/: analysis_notebook.ipynb
solar_forecast/: __init__.py  load_data.py  main.py  old_train.py  optuna_fusion.py  optuna_ground_only.py  optuna_satellite_only.py  predict.py  predict_randomday.py  predict_randomday_optuna.py  prepare.py  preprocess_data.py  retrain_best.py  retrain_fusion_best.py  retrain_ground_best.py  retrain_satellite_best.py  run_all_trainings.sh  run_fusion_pipeline.sh  run_ground_pipeline.sh  run_optuna_searches.sh  run_satellite_pipeline.sh  train.py  train_huber_randomday.py
solar_forecast/config/: logging.py  (+1 more)
solar_forecasting/: __init__.py  dataset.py  features.py  plots.py
(+17 files in other folders)
