[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solar_forecasting"
version = "0.0.1"
description = "Solar Forecasting"
authors = [
  { name = "Ainhoa Vilanova Almagia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["solar_forecasting"]
include = ["pyproject.toml", "solar_forecasting/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["solar_forecasting"]
force-sort-within-sections = true

