[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solar_forecast"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Ainhoa Vilanova Almagia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["solar_forecast"]
include = ["pyproject.toml", "solar_forecast/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["solar_forecast"]
force-sort-within-sections = true

